--- a/Registration/src/main/resources/messages_en.properties
+++ b/Registration/src/main/resources/messages_en.properties
@@ -50,3 +50,10 @@ label.amount=Amount
 label.vip=Is VIP
 label.vipDesc=VIP Description
 label.receiptDate=Receipt Date
+label.remarks=Remarks
+label.pdc=Post Dated Cheque
+label.pdcDate=Post Date
+label.amountPaidCategory=Amount Paid Category
+label.reference=Reference Group
+label.addReferenceGroup=Add Reference Group
+label.erid=Reg.Id
