--- a/Registration/src/main/resources/messages_en.properties
+++ b/Registration/src/main/resources/messages_en.properties
@@ -57,3 +57,4 @@ label.amountPaidCategory=Amount Paid Category
 label.reference=Reference Group
 label.addReferenceGroup=Add Reference Group
 label.erid=Reg.Id
+label.pdcNotClear=Is PDC Pending
