--- a/Registration/src/main/resources/messages_en.properties
+++ b/Registration/src/main/resources/messages_en.properties
@@ -58,3 +58,5 @@ label.reference=Reference Group
 label.addReferenceGroup=Add Reference Group
 label.erid=Reg.Id
 label.pdcNotClear=Is PDC Pending
+label.report=Generate Report
+label.consolidated=Generate ConsolidatedReport
