--- a/Registration/src/main/resources/messages_en.properties
+++ b/Registration/src/main/resources/messages_en.properties
@@ -60,3 +60,8 @@ label.erid=Reg.Id
 label.pdcNotClear=Is PDC Pending
 label.report=Generate Report
 label.consolidated=Generate ConsolidatedReport
+key.paymentAdded=System:New Payment - [Id:{0}, Amount Paid:{1}]
+key.paymentUpdated=System:Payment Updated - [Id:{0}, Amount Paid:{1}]
+key.participantAdded=System:New Particpant - [Id:{0}, Name:{1}]
+key.registrationAdded=System:New Registration - [Id:{0}, Participant:{1}, Event:{1}]
+key.registrationUpdated=System:Registration Updated- [Id:{0}, Participant:{1}, Event:{1}]
