--- a/Registration/src/main/resources/messages_en.properties
+++ b/Registration/src/main/resources/messages_en.properties
@@ -56,12 +56,17 @@ label.pdcDate=Post Date
 label.amountPaidCategory=Amount Paid Category
 label.reference=Reference Group
 label.addReferenceGroup=Add Reference Group
-label.erid=Reg.Id
+label.id=Id#
 label.pdcNotClear=Is PDC Pending
 label.report=Generate Report
 label.consolidated=Generate ConsolidatedReport
 key.paymentAdded=System:New Payment - [Id:{0}, Amount Paid:{1}]
 key.paymentUpdated=System:Payment Updated - [Id:{0}, Amount Paid:{1}]
 key.participantAdded=System:New Particpant - [Id:{0}, Name:{1}]
-key.registrationAdded=System:New Registration - [Id:{0}, Participant:{1}, Event:{1}]
-key.registrationUpdated=System:Registration Updated- [Id:{0}, Participant:{1}, Event:{1}]
+key.registrationAdded=System:New Registration - [Id:{0}, Participant:{1}, Event:{2}]
+key.registrationUpdated=System:Registration Updated- [Id:{0}, Participant:{1}, Event:{2}]
+label.registrationDate=Registration Date
+label.participantId=Par.Id
+key.registrationReplace=System:Participant Replaced - [Registration Id:{0}, Event:{1}, New Participant:{2} - Old Participant:{3} ]
+key.registrationCancelled=System:Registration Cancelled - [Registration Id:{0}, Participant Name:{1}]
+label.status=Status
