- Support deactivation of events, event fee and registrations. - Add css style to anchor tags.

--- a/Registration/src/main/resources/messages_en.properties
+++ b/Registration/src/main/resources/messages_en.properties
@@ -20,6 +20,7 @@ label.permission=Permission
 label.addVolunteer=Add Volunteer
 label.password=Password
 label.delete=Delete
+label.deactivate=Deactivate
 label.counter=Counter
 label.signin=Sign In
 label.seat=Seat No.
