Event validations are added. Respective changes are done for the controller. Added the maven plugin declaration to the pom.xml- This makes the application to be directly deployed from eclipse.

--- a/Registration/src/main/resources/messages_en.properties
+++ b/Registration/src/main/resources/messages_en.properties
@@ -71,3 +71,12 @@ label.participantId=Par.Id
 key.registrationReplace=System:Participant Replaced - [Registration Id:{0}, Event:{1}, New Participant:{2} - Old Participant:{3} ]
 key.registrationCancelled=System:Registration Cancelled - [Registration Id:{0}, Participant Name:{1}]
 label.status=Status
+
+## Form Errors ##
+#Event Form#
+event.name.empty=Event name cannot be empty 
+event.venue.empty=Event venue cannot be empty
+event.city.empty=Event city cannot be empty
+event.state.empty=Event state cannot be empty
+event.startDate.empty=Event startDate cannot be empty
+event.endDate.empty=Event endDate cannot be empty
