c3po, alpha numeric seating, on hold status,

--- a/Registration/src/main/resources/messages_en.properties
+++ b/Registration/src/main/resources/messages_en.properties
@@ -70,9 +70,10 @@ label.registrationDate=Registration Date
 label.participantId=Par.Id
 key.registrationReplace=System:Participant Replaced - [Registration Id:{0}, Event:{1}, New Participant:{2} - Old Participant:{3} ]
 key.registrationCancelled=System:Registration Cancelled - [Registration Id:{0}, Participant Name:{1}]
+key.registrationOnHold=System:Registration On Hold - [Registration Id:{0}, Participant Name:{1}]
 label.status=Status
-
-## Form Errors ##
+label.seatingType=Seating Type
+label.rowMetaName=Seating Arrangement Name
 #Event Form#
 event.name.empty=Event name cannot be empty 
 event.venue.empty=Event venue cannot be empty
