Registration validations are added.

--- a/Registration/src/main/resources/messages_en.properties
+++ b/Registration/src/main/resources/messages_en.properties
@@ -81,3 +81,16 @@ event.city.empty=Event city cannot be empty
 event.state.empty=Event state cannot be empty
 event.startDate.empty=Event startDate cannot be empty
 event.endDate.empty=Event endDate cannot be empty
+
+#Registration Form Validation
+participant.vipDesc=Please enter the VIP description
+participant.foundation=Please select the Foundation
+participant.name=Please enter the participant name
+participant.mobile=Please enter the participant mobile number
+registration.level=Please select the level
+registration.amountPayable=Please enter the amount payable
+currentPayment.receiptInfo=Please enter the receipt info
+currentPayment.mode=Please select the mode of payment
+currentPayment.receiptDate=Please enter the receipt date
+eventId=Please enter the Event name 
+
