formatted validator class, fixed reference group issue and added eligibility level validation

--- a/Registration/src/main/resources/messages_en.properties
+++ b/Registration/src/main/resources/messages_en.properties
@@ -78,6 +78,7 @@ label.rowMetaName=Seating Arrangement Name
 event.name.empty=Event name cannot be empty 
 event.venue.empty=Event venue cannot be empty
 event.city.empty=Event city cannot be empty
+event.eligibilityLevel.empty=Eligibility Level cannot be empty
 event.state.empty=Event state cannot be empty
 event.startDate.empty=Event startDate cannot be empty
 event.endDate.empty=Event endDate cannot be empty
