Added the related changes to Payment Validation

--- a/Registration/src/main/resources/messages_en.properties
+++ b/Registration/src/main/resources/messages_en.properties
@@ -95,3 +95,8 @@ currentPayment.mode=Please select the mode of payment
 currentPayment.receiptDate=Please enter the receipt date
 eventId=Please enter the Event name 
 
+#Payment form Validation
+currentPayment.amountPaid=Please enter the valid amount
+currentPayment.pdc=Please enter the Post Dated Cheque No
+currentPayment.pdcDate=Please enter the Post Date
+
