--- a/Registration/src/main/resources/messages_en.properties
+++ b/Registration/src/main/resources/messages_en.properties
@@ -61,6 +61,13 @@ label.id=Id#
 label.pdcNotClear=Is PDC Pending
 label.report=Generate Report
 label.consolidated=Generate ConsolidatedReport
+label.manageKits=Manage Kits
+label.submit=Submit
+label.stock=Stock
+label.volName=Volunteer Name
+label.kitsGiven=Kits Dispersed
+label.kitCount=Total Kits
+label.kitsLeft=Kits Left
 key.paymentAdded=System:New Payment - [Id:{0}, Amount Paid:{1}]
 key.paymentUpdated=System:Payment Updated - [Id:{0}, Amount Paid:{1}]
 key.participantAdded=System:New Particpant - [Id:{0}, Name:{1}]
