import refactoring, import row meta, custom seats, registration validation

--- a/Registration/src/main/resources/messages_en.properties
+++ b/Registration/src/main/resources/messages_en.properties
@@ -80,7 +80,10 @@ key.registrationCancelled=System:Registration Cancelled - [Registration Id:{0}, 
 key.registrationOnHold=System:Registration On Hold - [Registration Id:{0}, Participant Name:{1}]
 label.status=Status
 label.seatingType=Seating Type
-label.rowMetaName=Seating Arrangement Name
+label.seatAllocated=Seats Allocated
+label.rowMetaName=Row Meta
+label.exportConsolRegistrations=Generate Consolidated Report
+label.exportRegistrationsForImp=Generate Report For Import
 #Event Form#
 event.name.empty=Event name cannot be empty 
 event.venue.empty=Event venue cannot be empty
@@ -100,7 +103,8 @@ registration.amountPayable=Please enter the amount payable
 currentPayment.receiptInfo=Please enter the receipt info
 currentPayment.mode=Please select the mode of payment
 currentPayment.receiptDate=Please enter the receipt date
-eventId=Please enter the Event name 
+registration.noAccess=You are not authorized to update as there is a pending payment. Please contact the Administrator.
+eventId=Please enter the Event name
 
 #Payment form Validation
 currentPayment.amountPaid=Please enter the valid amount
